--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.RC2</spring-cloud.version>
+		<appengine.target.version>1.9.71</appengine.target.version>
+		<appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>
 	</properties>
 
 	<dependencies>
@@ -80,6 +82,18 @@
 			<version>4.1.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-testing</artifactId>
+			<version>${appengine.target.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-stubs</artifactId>
+			<version>${appengine.target.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -128,7 +142,13 @@
 			<plugin>
 				<groupId>com.google.appengine</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.9.9</version>
+				<version>${appengine-maven-plugin-version}
+			</version>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>${appengine-maven-plugin-version}</version>
 			</plugin>
 		</plugins>
 	</build>
