--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,6 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>Hoxton.RC2</spring-cloud.version>
-		<appengine.target.version>1.9.71</appengine.target.version>
-		<appengine-maven-plugin-version>1.3.2</appengine-maven-plugin-version>
 	</properties>
 
 	<dependencies>
@@ -70,28 +68,10 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.projectlombok</groupId> -->
-		<!-- <artifactId>lombok</artifactId> -->
-		<!-- <version>1.18.10</version> -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>4.1.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-testing</artifactId>
-			<version>${appengine.target.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-api-stubs</artifactId>
-			<version>${appengine.target.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -139,17 +119,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>com.google.appengine</groupId>
-				<artifactId>appengine-maven-plugin</artifactId>
-				<version>${appengine-maven-plugin-version}
-			</version>
-			</plugin>
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>appengine-maven-plugin</artifactId>
-				<version>${appengine-maven-plugin-version}</version>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.google.appengine</groupId> -->
+<!-- 				<artifactId>appengine-maven-plugin</artifactId> -->
+<!-- 				<version>1.9.9</version> -->
+<!-- 				<goals> -->
+<!-- 					<goal>deploy</goal> -->
+<!-- 				</goals> -->
+<!-- 			</plugin> -->
 		</plugins>
 	</build>
 
