--- a/pom.xml
+++ b/pom.xml
@@ -119,14 +119,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>com.google.appengine</groupId> -->
-<!-- 				<artifactId>appengine-maven-plugin</artifactId> -->
-<!-- 				<version>1.9.9</version> -->
-<!-- 				<goals> -->
-<!-- 					<goal>deploy</goal> -->
-<!-- 				</goals> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>2.0.0</version>
+				<configuration>
+					<deploy.projectId>GCLOUD_CONFIG</deploy.projectId>
+					<deploy.version>GCLOUD_CONFIG</deploy.version>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
